--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-native-side-menu": "^1.0.2",
     "react-native-simple-table": "0.0.2",
     "react-native-vector-icons": "^4.2.0",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-navigation": "^1.0.0-beta.11",
     "prop-types": "^15.5.10",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
